[package]
name = "mtots"
version = "0.1.1"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/math4tots/mtots"
description = "The mtots scripting language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# mtots_core version must always match
[dependencies]
mtots_core = { path = "../mtots_core", version = "0.1.1" }
serde_json = { version = "1.0", features = ["preserve_order"] }
dbin = "0.1.7"
rand = "0.7"
rand_core = "0.5"
rand_chacha = "0.2"
yagl = "0.0.10"
anyhow = "1.0"
rustyline = "6.2.0"
regex = "1.3"
lazy_static = "1.4"
