[package]
name = "mtots"
version = "0.1.2"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/math4tots/mtots"
description = "The mtots scripting language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# mtots_core version must always match
[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
mtots_core = { path = "../mtots_core", version = "0.1.2", features = ["line"] }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
rand = { version = "0.7", optional = true }
rand_chacha = { version = "0.2", optional = true }
regex = { version = "1.3", optional = true }
ggez = { version = "0.5", optional = true }
image = { version = "0.23", optional = true }
hound = { version = "3.4", optional = true }
web-view = { version = "0.6", features = ["edge"], optional = true }

[features]
default = ["basekit", "gamekit", "webview"]
gamekit = ["ggez", "hound", "image"]
basekit = ["rand", "rand_chacha", "regex", "serde_json"]
webview = ["web-view"]
